fixedTop,onInputEvent,innertext to TextNode,styledScrollBar

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@
   .flex-hcenter {
     align-items: center;
   }
+  .f-dir-col{
+    flex-direction: column;
+  }
   .t-center {
     text-align: center;
   }
@@ -50,6 +53,9 @@
     /* justify-content: center; */
     max-width: 700px;
     min-height: 100%;
+    /* position: relative; */
+    /* overflow-y: scroll; */
+    
   }
   
   .card {
@@ -115,3 +121,42 @@
   .ml-20{
       margin-left: 20px;
   }
+  .fixed-top{
+    /* border: 1px solid red; */
+    position: sticky;
+    top: 0;
+    /* left: 0; */
+    width: 100%;
+    /* background-color: white; */
+
+  }
+  .card-container{
+    /* border: 5px solid red; */
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 3px;
+    margin-bottom: 2px;
+  }
+
+  /* scroll-bar style */
+  /* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(29, 184, 223);
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3a70a3; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: red; 
+}
+
